tests/typing/fail/bool-arith-01.stderr
error: type mismatch: expected `int`, found `bool`
 --> tests/typing/fail/bool-arith-01.rs:8:19
  |
8 |         a : int = -false;
  |                   ^^^^^^
